--- a/src/components/CreatePost/create-post.module.css
+++ b/src/components/CreatePost/create-post.module.css
@@ -18,14 +18,12 @@ form{
     width: 60%;
 }
 
-.publish-btn{
+.publish_btn{
     color: white;
     background-color: rgb(28,78,216);
     border-radius: 8px;
     padding: 12px;
     float:right;
-    justify-self: flex-start;
-    width: 10%;
     margin-left: auto;
     border: 1px solid rgb(28,78,216);
 }
