--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -20,3 +20,21 @@ p{
     color: #7fb4c3;
     text-decoration: underline;
 }
+
+.circular_spinner
+{
+    border: 4px solid #f3f3f3; /* Light gray background */
+    border-top: 4px solid #3498db; /* Blue color for the spinner */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite; /* Infinite spinning effect */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
