--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -19,3 +19,8 @@ a { color: inherit; text-decoration: none; }
 body{
     color:white;
 }
+
+.name{
+    font-family: 'Merriweather', serif;
+    letter-spacing: 1px;
+}
