--- a/src/components/postPage/postpage.module.css
+++ b/src/components/postPage/postpage.module.css
@@ -6,6 +6,10 @@ main{
     margin-top: 5rem;
 }
 
+body{
+  box-sizing:  border-box;
+}
+
 img{
     width: 100%;
     object-fit:cover;
@@ -68,4 +72,44 @@ gap: 1rem;
   .control_items a:hover {
     background-color: #4a4e48; /* Lighter shade for hover effect */
     color: #f1f1f1; /* Optional: change text color on hover */
+  }
+
+  .comments input,textarea{
+    /* width: 100%; */
+    background-color: transparent;
+    border: 1px solid #4B5563;
+    border-radius: 4px;
+    color: white;
+    padding: 1rem;
+  }
+
+  .comments{
+    /* margin-left: 10rem;
+    padding: 7rem; */
+
+    border-top: 3px solid #4B5563;
+    padding: 1rem;
+/* width: 100%; */
+
+
+  }
+
+  section{
+ 
+  }
+
+  .comments form {
+    width: 100%;
+  }
+
+  .comments button{
+    font-weight: 700;
+    padding: 10px 14px;
+    background-color: #2563EB;
+    border-radius: 8px;
+    width: fit-content;
+    line-height: 1.25rem;
+    font-size: 1.1rem;
+    color: white;
+
   }
