Comments components re-renders after deleting a comment

--- a/src/components/comments/comment.module.css
+++ b/src/components/comments/comment.module.css
@@ -17,9 +17,10 @@
 
 }
 
-.comment button {
+.comment a {
     position: absolute;
-    right: 0;
+    right: 10px;
+    top: 10px;
     background-color: transparent;
 
 }
