Only admin can remove anyone's comment, while user can only remove their comment

--- a/src/components/comments/comment.module.css
+++ b/src/components/comments/comment.module.css
@@ -7,13 +7,15 @@
     border-radius: 6px;
     padding: 0.6rem;
     /* align-items: center; */
+    word-break: break-all;
 }
 
 .comment_info{
     display:flex;
     /* justify-content: center; */
     align-items: center;
-    gap: 1rem;
+    gap: 1rem;    flex-wrap: wrap;
+
 
 }
 
