--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,8 +1,10 @@
 nav{
     display:flex;
-    justify-content: space-around;
     /* justify-content: center; */
-    align-items: center;
+    /* margin-left: 3rem;
+    margin-top: 1rem; */
+    padding: 2rem;
+    justify-content: space-between;;
 }
 
 a { color: inherit; text-decoration: none; } 
@@ -12,7 +14,7 @@ a { color: inherit; text-decoration: none; }
     gap: 1rem;
     font-size: 18px;
     line-height: 24px;
-    color: #8e9db1
+    color: #FFA07A
 }
 
 
@@ -23,6 +25,9 @@ body{
 .name{
     font-family: 'Merriweather', serif;
     letter-spacing: 1px;
+    font-size: 1.2rem;
+    color :#FFA07A;
+    font-weight: 700;
 }
 
 .create_post {
