--- a/src/components/blog/blog.module.css
+++ b/src/components/blog/blog.module.css
@@ -11,3 +11,30 @@ h1{
     text-align: center;
     margin-top: 2rem;
 }
+
+@media screen and (max-width: 1700px) {
+
+    .posts{
+        display:grid;
+        grid-template-columns: 1fr 1fr ;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+
+    .posts{
+        display:grid;
+        grid-template-columns: 1fr  ;
+    }
+}
+
+.post{
+    display:flex;
+    flex-direction: column;
+}
+
+main{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
