--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -2,7 +2,7 @@
     
     height: auto;
     /* object-fit: cover; */
-    width: 500px;
+    width: 100%;
     margin-top: 15px;
 
 }
@@ -14,10 +14,12 @@ p{
 
 .post{
     /* max-width: 50%; */
+    display:flex;
+    flex-direction: column;
 }
 
 .link {
-    color: #7fb4c3;
+    color: #FFA07A;
     text-decoration: underline;
 }
 
@@ -37,4 +39,14 @@ p{
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+  }
+
+  .card{
+    display:flex;
+    flex-direction: column;
+  }
+
+  .card_title{
+    font-size: 1em;
+    font-weight: 600
   }
