--- a/src/components/postPage/postpage.module.css
+++ b/src/components/postPage/postpage.module.css
@@ -148,3 +148,9 @@ pre {
   word-wrap: break-word; /* Break long words if necessary */
   word-break: break-word; /* Break long words */
 }
+
+
+
+.title{
+  font-size: 1.6rem;
+}
