--- a/src/components/comments/comment.module.css
+++ b/src/components/comments/comment.module.css
@@ -10,6 +10,10 @@
     word-break: break-all;
 }
 
+time    {
+    color:#FFA07A;
+}
+
 .comment_info{
     display:flex;
     /* justify-content: center; */
