--- a/src/components/info/info.module.css
+++ b/src/components/info/info.module.css
@@ -7,7 +7,10 @@
     flex-direction: column;
 
     margin-top: 6rem;
-    gap: 1rem
+    gap: 1rem;
+
+    margin-bottom: 5rem;
+    padding: 2rem;
 }
 
 p{
